package datto_linux_client;

message StartBackupReply {

    required   bool started  = 1;
    required int32 rc = 2;
    required string block_path = 3;
    optional string errmsg = 4;

}
